# inkwell

./: CLAUDE.md  inkwell.toml.example  pyproject.toml
src/inkwell/: __init__.py  __main__.py  exceptions.py
src/inkwell/cli/: app.py  display.py
src/inkwell/core/: cache.py  config.py  downloader.py  models.py
src/inkwell/epub/: builder.py  cover.py  styles.py  templates.py
src/inkwell/sites/: __init__.py  ao3.py  fanfictionnet.py  novelfull.py  royalroad.py  xenforo.py
